--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
 theme: jekyll-theme-architect+
-title: Welcome to the Joan Pablo home page
-description: This is a place for sharing knownlage ang learn 
+name: Hello
